# claudeception

./: pyproject.toml
src/claudeception/: __init__.py  __main__.py  rules.txt
