[project]
name = "claudeception"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.39.0",
    "hypothesis>=6.119.2",
    "pytest>=8.3.3",
    "rich>=13.9.4",
    "trio>=0.27.0",
]
scripts = { main = "claudeception.__main__:main" }

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.4",
]

[tool.setuptools]
package-dir = { "" = "src" }
